# Olist-E-Commerce-Performance---Customer-Analytics

./: .gitignore  main.py  pyproject.toml
Python/: eda_notebook.ipynb  python analysis.md
SQL/: cleaning.sql  schema.sql
