[project]
name = "olist-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.11.0",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "psycopg2>=2.9.12",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
]
